--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
             "email": "mabhelitc@gmail.com"
         }
     ],
+    "license": "MIT",
     "require": {},
     "autoload": {
         "psr-4": {
